// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AskUserDialog > Rich context support > does not render context when 'empty string' 1`] = `
"Which option?

● 1.  A
      Option A
  2.  B
      Option B
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > Rich context support > does not render context when 'undefined' 1`] = `
"Which option?

● 1.  A
      Option A
  2.  B
      Option B
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > Rich context support > does not render context when 'whitespace only' 1`] = `
"Which option?

● 1.  A
      Option A
  2.  B
      Option B
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > Rich context support > renders markdown context before the question for choice type 1`] = `
"Context

We need a database that supports:
 - High availability
 - Horizontal scaling

Which database should we use?

● 1.  PostgreSQL
      Relational database
  2.  MongoDB
      Document database
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > Rich context support > renders markdown context before the question for text type 1`] = `
"API Configuration

Please provide the full URL including the protocol.

Enter the API endpoint:

> Enter your response


Enter to submit · Esc to cancel"
`;

exports[`AskUserDialog > Rich context support > truncates long context with hidden lines indicator 1`] = `
"Implementation Plan

 - Step 1: Do something important
 - Step 2: Do something important
 - Step 3: Do something important
 - Step 4: Do something important
 - Step 5: Do something important
 - Step 6: Do something important
 - Step 7: Do something important
 - Step 8: Do something important
 - Step 9: Do something important
 - Step 10: Do something important
 - Step 11: Do something important
 - Step 12: Do something important
... last 8 lines hidden ...

Approve this plan?

● 1.  Yes
      Approve and proceed
  2.  No
      Reject the plan
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > Rich context support > uses custom placeholder for the Other option 1`] = `
"Which cloud provider?

  1.  AWS
      Amazon Web Services
  2.  GCP
      Google Cloud Platform
● 3.  Type your cloud provider...

Enter to submit · Esc to cancel"
`;

exports[`AskUserDialog > Text type questions > renders text input for type: "text" 1`] = `
"What should we name this component?

> e.g., UserProfileCard


Enter to submit · Esc to cancel"
`;

exports[`AskUserDialog > Text type questions > shows correct keyboard hints for text type 1`] = `
"Enter the variable name:

> Enter your response


Enter to submit · Esc to cancel"
`;

exports[`AskUserDialog > Text type questions > shows default placeholder when none provided 1`] = `
"Enter the database connection string:

> Enter your response


Enter to submit · Esc to cancel"
`;

exports[`AskUserDialog > allows navigating to Review tab and back 1`] = `
"← □ Tests │ □ Docs │ ≡ Review →

Review your answers:

⚠ You have 2 unanswered questions

Tests → (not answered)
Docs → (not answered)

Enter to submit · Tab/Shift+Tab to edit answers · Esc to cancel"
`;

exports[`AskUserDialog > hides progress header for single question 1`] = `
"Which authentication method should we use?

● 1.  OAuth 2.0
      Industry standard, supports SSO
  2.  JWT tokens
      Stateless, good for APIs
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > renders question and options 1`] = `
"Which authentication method should we use?

● 1.  OAuth 2.0
      Industry standard, supports SSO
  2.  JWT tokens
      Stateless, good for APIs
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > shows Review tab in progress header for multiple questions 1`] = `
"← □ Framework │ □ Styling │ ≡ Review →

Which framework?

● 1.  React
      Component library
  2.  Vue
      Progressive framework
  3.  Enter a custom value

Enter to select · ←/→ to switch questions · Esc to cancel"
`;

exports[`AskUserDialog > shows keyboard hints 1`] = `
"Which authentication method should we use?

● 1.  OAuth 2.0
      Industry standard, supports SSO
  2.  JWT tokens
      Stateless, good for APIs
  3.  Enter a custom value

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > shows progress header for multiple questions 1`] = `
"← □ Database │ □ ORM │ ≡ Review →

Which database should we use?

● 1.  PostgreSQL
      Relational database
  2.  MongoDB
      Document database
  3.  Enter a custom value

Enter to select · ←/→ to switch questions · Esc to cancel"
`;

exports[`AskUserDialog > shows scroll arrows when options exceed available height 1`] = `
"Choose an option

▲
●  1.  Option 1
       Description 1
   2.  Option 2
       Description 2
   3.  Option 3
       Description 3
▼

Enter to select · ↑/↓ to navigate · Esc to cancel"
`;

exports[`AskUserDialog > shows warning for unanswered questions on Review tab 1`] = `
"← □ License │ □ README │ ≡ Review →

Review your answers:

⚠ You have 2 unanswered questions

License → (not answered)
README → (not answered)

Enter to submit · Tab/Shift+Tab to edit answers · Esc to cancel"
`;
